tests/toylang/neg/001528_mutation.toylang
program a = { var 0 a : bool; } .
